--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,6 @@ body {
 }
 
 .welcome-to h5 {
-    font-weight: 400;
     text-align: center;
     color: #00FFFF;
     font-size: 0.8rem;
@@ -187,9 +186,10 @@ body {
     position: fixed;
     bottom: 0;
     right: 1.4rem;
-    min-height: 26rem;
+    min-height: 24rem;
     color: #00FFFF;
     text-transform: uppercase;
+    font-size: 0.8rem;
     writing-mode: vertical-rl;
     z-index: 1000;
 }
@@ -327,7 +327,7 @@ body {
 /* ABOUT SECTION  */
 
 .about-section {
-    min-height: 100vh;
+    min-height: 80vh;
     padding: 1rem;
     background-image: url(./assets/Hexagon.svg);
     background-repeat: no-repeat;
@@ -347,17 +347,21 @@ body {
 }
 
 .about-info {
-    margin-top: 3rem;
     font-size: 1rem;
 }
 
 .about-info p {
     font-size: 1rem;
     margin: 2rem 0;
+
 }
 
+.about-content {
+    margin-top: 3rem;
+}
+
+
 .dev-image {
-    margin-top: 5rem;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -369,13 +373,13 @@ body {
     max-height: 18rem;
     border-radius: 50%;
     border: 5px solid #00FFFF;
-    filter: saturate(0.90)
+    margin: 0 1rem;
 }
 
 /* SKILLS SECTION  */
 
 .skills-section {
-    /* min-height: 100vh; */
+    min-height: 100vh;
     padding: 1rem;
     background-image: url(./assets/Hexagon.svg);
     background-repeat: no-repeat;
@@ -503,15 +507,15 @@ body {
     text-transform: uppercase;
 }
 
-
 /* CONTACT SECTION  */
 
 .contact-section {
     min-height: 100vh;
     padding: 1rem;
-    background-image: url(./assets/Hexagon.svg);
+    background-image: url(./assets/World\ Map.svg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
+    background-position: center;
 }
 
 .contact-section p {
@@ -596,37 +600,6 @@ body {
 .footer-content i {
     color: #00FFFF;
     font-size: 1.5rem;
-}
-
-.to-top {
-    background-color: #00FFFF;
-    position: fixed;
-    bottom: 1.5rem;
-    right: 2.5rem;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    border: 3px solid #fff;
-    font-size: 30px;
-    font-weight: bold;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.6s;
-}
-
-.to-top i {
-    color: #191c32;
-    font-size: 2rem;
-}
-
-.to-top.active {
-    bottom: 20px;
-    opacity: 1;
-    pointer-events: auto;
 }
 
 /* MEDIA QUERY BREAKPOINTS  **********************************/
@@ -732,12 +705,12 @@ body {
     }
 
     .about-info p {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
     }
 
     .about-section img {
-        max-width: 30rem;
-        max-height: 30rem;
+        max-width: 25rem;
+        max-height: 25rem;
     }
 
     /* SKILLS SECTION  */
@@ -809,6 +782,37 @@ body {
         width: 38rem;
     }
 
+    /* TO TOP BUTTON */
+
+    .to-top {
+        background-color: #00FFFF;
+        position: fixed;
+        bottom: 1.5rem;
+        right: 2.5rem;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        border: 3px solid #fff;
+        font-size: 30px;
+        font-weight: bold;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-decoration: none;
+        opacity: 0;
+        pointer-events: none;
+    }
+
+    .to-top i {
+        color: #191c32;
+        font-size: 2rem;
+    }
+
+    .to-top.active {
+        bottom: 20px;
+        opacity: 1;
+        pointer-events: auto;
+    }
 }
 
 /* MAX-WIDTH 1000PX  ******************************************/
@@ -829,10 +833,22 @@ body {
         font-size: 2rem;
     }
 
+    /* WORK SECTION  */
+
     .container {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
     }
+}
 
+@media (min-width: 1200px) {
+
+    /* ABOUT SECTION  */
+
+    .about-content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
