--- a/styles.css
+++ b/styles.css
@@ -558,19 +558,12 @@ body {
 textarea:focus,
 input:focus {
     outline-color: #00FFFF;
+    outline-style: solid;
+    outline-width: 3px;
 }
 
-.form textarea {
-    height: 10rem;
-    margin: 1rem 0;
-    border-radius: 10px;
-    border: none;
-}
-
-.form textarea::placeholder {
-    padding: 1rem;
-    font-size: 1.1rem;
-    font-family: 'Montserrat', sans-serif;
+.message-box {
+    height: 5rem;
 }
 
 .button {
