--- a/styles.css
+++ b/styles.css
@@ -507,7 +507,7 @@ body {
 /* CONTACT SECTION  */
 
 .contact-section {
-    min-height: 100vh;
+    height: 90vh;
     padding: 1rem;
     background-image: url(./assets/World\ Map.svg);
     background-repeat: no-repeat;
@@ -587,7 +587,7 @@ input:focus {
 
 .footer-content {
     width: 100%;
-    height: 6vh;
+    margin-top: 10rem;
     text-align: center;
 }
 
