--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@ body {
 /* MAIN SECTION  */
 
 .main-section {
-    min-height: 100vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -327,7 +327,6 @@ body {
 /* ABOUT SECTION  */
 
 .about-section {
-    min-height: 70vh;
     padding: 1rem;
     background-repeat: no-repeat;
     background-size: cover;
@@ -366,7 +365,7 @@ body {
 }
 
 .about-content img {
-    height: 500px;
+    height: 350px;
     border-radius: 50%;
     border: 5px solid #00FFFF;
 }
@@ -374,7 +373,6 @@ body {
 /* SKILLS SECTION  */
 
 .skills-section {
-    min-height: 80vh;
     padding: 1rem;
     background-image: url(./assets/Hexagon.svg);
     background-repeat: no-repeat;
@@ -446,13 +444,13 @@ body {
 }
 
 .cards {
-    max-width: 400px;
+    max-width: 295px;
     max-height: 620px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 1rem 1rem;
+    margin: 1rem 0;
     border-radius: 10px;
     border: 3px solid #00FFFF;
     background: rgba(0, 0, 0, 0.6);
@@ -465,7 +463,7 @@ body {
 }
 
 .project-img img {
-    width: 395px;
+    width: 290px;
     max-height: 320px;
     border-radius: 10px;
 }
@@ -507,7 +505,7 @@ body {
 /* CONTACT SECTION  */
 
 .contact-section {
-    height: 90vh;
+    height: 100vh;
     padding: 1rem;
     background-image: url(./assets/World\ Map.svg);
     background-repeat: no-repeat;
@@ -587,7 +585,7 @@ input:focus {
 
 .footer-content {
     width: 100%;
-    margin-top: 10rem;
+    margin-top: 14rem;
     text-align: center;
 }
 
@@ -678,7 +676,7 @@ input:focus {
 
 /* MAX-WIDTH 701PX  ******************************************/
 
-@media (min-width: 701px) {
+@media (min-width: 600px) {
 
     /* MAIN SECTION  */
 
@@ -755,11 +753,17 @@ input:focus {
     }
 
     .cards {
-        max-height: 680px;
+        max-width: 400px;
+        max-height: 690px;
+        margin: 1rem 1rem;
     }
 
     .cards h2 {
         font-size: 1.5rem;
+    }
+
+    .project-img img {
+        width: 390px;
     }
 
     /* CONTACT SECTION  */
@@ -852,5 +856,9 @@ input:focus {
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+
+    .about-content img {
+        height: 450px;
     }
 }
