--- a/styles.css
+++ b/styles.css
@@ -437,6 +437,7 @@ body {
 }
 
 .container {
+    width: 100%;
     margin-top: 5rem;
     display: inline-block;
     justify-content: center;
@@ -444,7 +445,7 @@ body {
 }
 
 .cards {
-    max-width: 295px;
+    max-width: 460px;
     max-height: 620px;
     display: flex;
     flex-direction: column;
@@ -463,7 +464,7 @@ body {
 }
 
 .project-img img {
-    width: 290px;
+    width: 100%;
     max-height: 320px;
     border-radius: 10px;
 }
