--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,8 @@ body {
     letter-spacing: 2px;
 }
 
+/* NAVBAR  */
+
 .top-nav {
     display: flex;
     flex-direction: row;
@@ -170,9 +172,6 @@ body {
 .bounce {
     display: inline-block;
     position: relative;
-    -moz-animation: bounce 0.5s infinite linear;
-    -o-animation: bounce 0.5s infinite linear;
-    -webkit-animation: bounce 0.5s infinite linear;
     animation: bounce 0.5s infinite linear;
 }
 
@@ -232,81 +231,9 @@ body {
     margin: 0.5rem 0;
 }
 
-/* FOR ICONS TO BOUNCE  */
+/* BOUNCE ANIMATION  */
 
 @-webkit-keyframes bounce {
-    0% {
-        top: 0;
-    }
-
-    50% {
-        top: -0.2em;
-    }
-
-    70% {
-        top: -0.3em;
-    }
-
-    100% {
-        top: 0;
-    }
-}
-
-@-moz-keyframes bounce {
-    0% {
-        top: 0;
-    }
-
-    50% {
-        top: -0.2em;
-    }
-
-    70% {
-        top: -0.3em;
-    }
-
-    100% {
-        top: 0;
-    }
-}
-
-@-o-keyframes bounce {
-    0% {
-        top: 0;
-    }
-
-    50% {
-        top: -0.2em;
-    }
-
-    70% {
-        top: -0.3em;
-    }
-
-    100% {
-        top: 0;
-    }
-}
-
-@-ms-keyframes bounce {
-    0% {
-        top: 0;
-    }
-
-    50% {
-        top: -0.2em;
-    }
-
-    70% {
-        top: -0.3em;
-    }
-
-    100% {
-        top: 0;
-    }
-}
-
-@keyframes bounce {
     0% {
         top: 0;
     }
