--- a/styles.css
+++ b/styles.css
@@ -377,14 +377,14 @@ body {
 }
 
 .cards {
-    max-width: 400px;
+    width: 395px;
     max-height: 620px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 1rem 0;
-    border-radius: 10px;
+    border-radius: 12px;
     border: 3px solid #00FFFF;
     background: rgba(0, 0, 0, 0.6);
     transition: ease-in-out 0.5s;
@@ -433,6 +433,11 @@ body {
     font-size: 1.5rem;
     margin: 0 0.5rem;
     text-transform: uppercase;
+}
+
+.project--video {
+    width: 100%;
+    max-height: 320px;
 }
 
 /* CONTACT SECTION  */
