--- a/styles.css
+++ b/styles.css
@@ -383,14 +383,14 @@ body {
 
 .cards {
     width: 395px;
-    max-height: 620px;
+    height: 650px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 1rem 0;
+    margin: 1rem auto;
     border-radius: 12px;
-    border: 3px solid #00FFFF;
+    border: 2px solid #00FFFF;
     background: rgba(0, 0, 0, 0.6);
     transition: ease-in-out 0.5s;
     overflow: hidden;
@@ -403,21 +403,19 @@ body {
 
 .project-img img {
     width: 100%;
-    max-height: 320px;
+    height: 300px;
+    object-fit: fill;
 }
 
-.cardcontent h2 {
-    font-size: 1rem;
+.cardcontent>h2 {
+    font-size: 0.5rem;
     color: white;
     text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    margin: 1rem 0;
+    margin: 0.5rem 0;
 }
 
-.cardcontent p {
-    max-width: 390px;
-    font-size: 0.8rem;
+.cardcontent>p {
+    font-size: 0.6rem;
     text-align: center;
     margin: 1rem 0.5rem;
 }
